fix overflow

--- a/static/style.css
+++ b/static/style.css
@@ -11,6 +11,8 @@
     --group_hover_color:rgba(198, 36, 212,0.3);
   }
 
+
+
 /*  back button, to return to the
     previous items */
 #back{
@@ -18,6 +20,7 @@
     left: 10px;
     top: 10px;
     padding:20px;
+    margin:20px;
     background-color: white;
     border: 2px solid var(--genre_color);
     font-size: large;
@@ -30,6 +33,8 @@
 /*  contains all the items, it's the
     root container */
 .main_container{
+    overflow:scroll;
+    position:relative;
 
     display: flex;
     /* main direction */
@@ -44,10 +49,21 @@
     within when there is extra space in the cross-axis */
     align-content: center;
 
-    height: 100%;
+    height: 80%;
     width: 100%;
+    margin:auto;
 
 }
+/* Hide scrollbar for Chrome, Safari and Opera */
+.main_container::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .main_container {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
 
 #item_abstract_container{
     text-align: center;
